--- a/docs/Kurdyukova2021WearableDevices.tex
+++ b/docs/Kurdyukova2021WearableDevices.tex
@@ -2,6 +2,13 @@
 \usepackage{jmlda}
 \newcommand{\hdir}{.}
 
+\renewcommand{\baselinestretch} {1.35}
+
+\usepackage{graphicx}
+\usepackage{caption}
+\graphicspath{{phase/}}
+\DeclareGraphicsExtensions{.pdf,.png,.jpg}
+
 \begin{document}
 
 \title
@@ -44,6 +51,37 @@
 
 Решение поставленных задач является важным шагом на пути к разработке алгоритмов, позволяющих определить разладку движения по фазовой траектории, найти инвариант, сохраняющийся на классах эквивалентности конкретного типа периодического движения, а также распознать суперпозицию нескольких движений. Эти результаты крайне важны с точки зрения понимания и моделирования человека, биомедицинского применения и внесли бы значительный вклад в область анализа биосигналов.
 
+\section{Постановка задачи}
+Данные, считанные с трехосевого акселерометра, представляют собой временной ряд 
+    \[X = \{ x(i) \}_{i = 1}^{m} \] 
+с явно выделенным периодическим классом $y\in\mathbb{Y}$ (ходьба, бег, шаги вверх и вниз по лестнице и т.п.).
+
+Временной ряд $X$ может быть представлен в виде разложения по главным компонентам. Для этого ряд преобразуется в траекторную матрицу $\mathbf{H}$
+    \[ \mathbf{H} = \begin{pmatrix}
+                        x(1) & \dots & x(k) \\
+                        x(2) & \dots & x(k+1) \\
+                        \hdotsfor{3} \\
+                        x(l) & \dots & x(m)
+                    \end{pmatrix}\]
+Для нахождения аппроксимации компонент разложения выполняется сингулярное разложение ковариационной матрицы $\mathbf{H}$
+    \[ \frac{1}{l}\mathbf{H}^T\mathbf{H} = \mathbf{V}\mathbf{\Lambda}\mathbf{V}^T, \quad \mathbf{\Lambda} = \diag(\lambda_1,\dots,\lambda_l) \]
+после чего определяются главные компоненты $\mathbf{y}_i = \mathbf{Hv}_i$ для соответствующих собственных значений $\mathbf{H}^T\mathbf{H}$
+
+В данной работе требуется построить модель $f\in\mathfrak{F}$, аппроксимирующую фазовую траекторию с помощью минимального числа главных компонент для заданного класса $y$. После чего совершается переход в фазовое пространство минимальной размерности, в котором отсутсвуют самопересечения фазовой траектории с точностью до стандартного отклонения восстановленной траектории. Требуется разбить фазовую траекторию на столько равных сегментов, сколько периодов содержится в исходном временном ряде.
+    \begin{figure}[ht]
+            \center{\includegraphics[scale = 0.165]{phase2.jpg}}
+    \end{figure}
+
+Опишем критерий качетсва модели. Пусть $\mathbf{y}_1,\dots,\mathbf{y}_n$ -- выбранные главные компоненты, аппроксимирующие фазовую траекторию. Тогда восстановленная часть траекторной матрицы $\mathbf{H}$
+    \[ \mathbf{\tilde{H}} = \mathbf{H}_1  + \dots + \mathbf{H}_n, \quad \mathbf{H_j} = \sqrt{\lambda_j}\mathbf{v}_j\mathbf{y}_j^T\]
+С помощью антидиагонального усреднения матрицы $\mathbf{\tilde{H}}$ восстанавливается временной ряд $\tilde{X}$. В качестве критерия качества модели используется функционал MAPE (средняя абсолютная процентная ошибка)
+    \[ MAPE = \frac{1}{\tau}\sum_{i = 1}^{\tau}100\frac{|\tilde{x}_i - x_i|}{|x_i|} \]
+    
+Сложностью модели является размерность фазового пространства.
+    \begin{figure}[ht]
+            \center{\includegraphics[scale = 0.165]{phase1.jpg}}
+    \end{figure}
+ 
 \section{Название раздела}
 Данный документ демонстрирует оформление статьи,
 подаваемой в электронную систему подачи статей \url{http://jmlda.org/papers} для публикации в журнале <<Машинное обучение и анализ данных>>.
@@ -67,4 +105,4 @@
 %%%% если имеется doi цитируемого источника, необходимо его указать, см. пример в \bibitem{article}
 %%%% DOI публикации, зарегистрированной в системе Crossref, можно получить по адресу http://www.crossref.org/guestquery/.
 
-\end{document} 
+\end{document}  
