--- a/docs/Kurdyukova2021WearableDevices.tex
+++ b/docs/Kurdyukova2021WearableDevices.tex
@@ -53,29 +53,31 @@
 
 \section{Постановка задачи}
 Данные, считанные с трехосевого акселерометра, представляют собой временной ряд 
-    \[X = \{ x(i) \}_{i = 1}^{m} \] 
-с явно выделенным периодическим классом $y\in\mathbb{Y}$ (ходьба, бег, шаги вверх и вниз по лестнице и т.п.).
+    \begin{equation}\label{ts}
+        X = \{ x(i) \}_{i = 1}^{m}
+    \end{equation}  
+Он соответсвует выделенному периодическому классу $y\in\mathbb{Y}$ (ходьба, бег, шаги вверх и вниз по лестнице и т.п.).
 
-Временной ряд $X$ может быть представлен в виде разложения по главным компонентам. Для этого ряд преобразуется в траекторную матрицу $\mathbf{H}$
+Декомпозиция временного ряда методом главнх компонет. Пусть временной ряд \eqref{ts} представлен в виде разложения, каждое слагаемое которого с высокой точностью аппроксимируется комбинацией главных компонент траекторной матрицы
     \[ \mathbf{H} = \begin{pmatrix}
                         x(1) & \dots & x(k) \\
                         x(2) & \dots & x(k+1) \\
                         \hdotsfor{3} \\
                         x(l) & \dots & x(m)
                     \end{pmatrix}\]
-Для нахождения аппроксимации компонент разложения выполняется сингулярное разложение ковариационной матрицы $\mathbf{H}$
-    \[ \frac{1}{l}\mathbf{H}^T\mathbf{H} = \mathbf{V}\mathbf{\Lambda}\mathbf{V}^T, \quad \mathbf{\Lambda} = \diag(\lambda_1,\dots,\lambda_l) \]
-после чего определяются главные компоненты $\mathbf{y}_i = \mathbf{Hv}_i$ для соответствующих собственных значений $\mathbf{H}^T\mathbf{H}$
+Для нахождения аппроксимации выполняется сингулярное разложение ковариационной матрицы $\mathbf{H}$
+    \[ \frac{1}{l}\mathbf{H}^{\mathsf{T}}\mathbf{H} = \mathbf{V}\mathbf{\Lambda}\mathbf{V}^{\mathsf{T}}, \quad \mathbf{\Lambda} = \diag(\lambda_1,\dots,\lambda_l) \]
+    после чего определяются главные компоненты $\mathbf{y}_k = \mathbf{Hv}_k$ для соответствующих собственных значений $\mathbf{H}^{\mathsf{T}}\mathbf{H}$.
 
-В данной работе требуется построить модель $f\in\mathfrak{F}$, аппроксимирующую фазовую траекторию с помощью минимального числа главных компонент для заданного класса $y$. После чего совершается переход в фазовое пространство минимальной размерности, в котором отсутсвуют самопересечения фазовой траектории с точностью до стандартного отклонения восстановленной траектории. Требуется разбить фазовую траекторию на столько равных сегментов, сколько периодов содержится в исходном временном ряде.
+В данной работе требуется построить модель $f\in\mathfrak{F}$, аппроксимирующую фазовую траекторию с помощью минимального числа главных компонент. Каждая модель аппроксимирует временной ряд заданного класса $y$. Критерием оптимальной размерности является отсутсвие самопересечений фазовой траектории с точностью до стандартного отклонения восстановленной траектории. Требуется разбить фазовую траекторию на столько сегментов, сколько периодов содержится во временном ряде \eqref{ts}.
     \begin{figure}[ht]
             \center{\includegraphics[scale = 0.165]{phase2.jpg}}
     \end{figure}
 
-Опишем критерий качетсва модели. Пусть $\mathbf{y}_1,\dots,\mathbf{y}_n$ -- выбранные главные компоненты, аппроксимирующие фазовую траекторию. Тогда восстановленная часть траекторной матрицы $\mathbf{H}$
+Критерий качества модели. Пусть $\mathbf{y}_1,\dots,\mathbf{y}_n$ -- выбранные главные компоненты, аппроксимирующие фазовую траекторию. Тогда восстановленная часть траекторной матрицы $\mathbf{H}$
     \[ \mathbf{\tilde{H}} = \mathbf{H}_1  + \dots + \mathbf{H}_n, \quad \mathbf{H_j} = \sqrt{\lambda_j}\mathbf{v}_j\mathbf{y}_j^T\]
 С помощью антидиагонального усреднения матрицы $\mathbf{\tilde{H}}$ восстанавливается временной ряд $\tilde{X}$. В качестве критерия качества модели используется функционал MAPE (средняя абсолютная процентная ошибка)
-    \[ MAPE = \frac{1}{\tau}\sum_{i = 1}^{\tau}100\frac{|\tilde{x}_i - x_i|}{|x_i|} \]
+    \[ \text{MAPE} = \frac{1}{\tau}\sum_{i = 1}^{\tau}100\frac{|\tilde{x}_i - x_i|}{|x_i|} \]
     
 Сложностью модели является размерность фазового пространства.
     \begin{figure}[ht]
@@ -105,4 +107,4 @@
 %%%% если имеется doi цитируемого источника, необходимо его указать, см. пример в \bibitem{article}
 %%%% DOI публикации, зарегистрированной в системе Crossref, можно получить по адресу http://www.crossref.org/guestquery/.
 
-\end{document}  
+\end{document} 
