--- a/docs/Kurdyukova2021WearableDevices.tex
+++ b/docs/Kurdyukova2021WearableDevices.tex
@@ -6,6 +6,7 @@
 
 \usepackage{graphicx}
 \usepackage{caption}
+\usepackage{subfig}
 \graphicspath{{phase/}}
 \DeclareGraphicsExtensions{.pdf,.png,.jpg}
 
@@ -31,7 +32,7 @@
 
 \bigskip
 \noindent
-\textbf{Ключевые слова}: \emph {}
+\textbf{Ключевые слова}: \emph {Временной ряд, фазовая траектория, траекторное попространство.}
 }
 
 %данные поля заполняются редакцией журнала
@@ -75,7 +76,7 @@
     \end{figure}
 
 Критерий качества модели. Пусть $\mathbf{y}_1,\dots,\mathbf{y}_n$ -- выбранные главные компоненты, аппроксимирующие фазовую траекторию. Тогда восстановленная часть траекторной матрицы $\mathbf{H}$
-    \[ \mathbf{\tilde{H}} = \mathbf{H}_1  + \dots + \mathbf{H}_n, \quad \mathbf{H_j} = \sqrt{\lambda_j}\mathbf{v}_j\mathbf{y}_j^T\]
+    \[ \mathbf{\widetilde{H}} = \mathbf{H}_1  + \dots + \mathbf{H}_n, \quad \mathbf{H_j} = \sqrt{\lambda_j}\mathbf{v}_j\mathbf{y}_j^T\]
 С помощью антидиагонального усреднения матрицы $\mathbf{\tilde{H}}$ восстанавливается временной ряд $\tilde{X}$. В качестве критерия качества модели используется функционал MAPE (средняя абсолютная процентная ошибка)
     \[ \text{MAPE} = \frac{1}{\tau}\sum_{i = 1}^{\tau}100\frac{|\tilde{x}_i - x_i|}{|x_i|} \]
     
@@ -83,23 +84,32 @@
     \begin{figure}[ht]
             \center{\includegraphics[scale = 0.165]{phase1.jpg}}
     \end{figure}
- 
-\section{Название раздела}
-Данный документ демонстрирует оформление статьи,
-подаваемой в электронную систему подачи статей \url{http://jmlda.org/papers} для публикации в журнале <<Машинное обучение и анализ данных>>.
-Более подробные инструкции по~стилевому файлу \texttt{jmlda.sty} и~использованию издательской системы \LaTeXe\
-находятся в~документе \texttt{authors-guide.pdf}.
-Работу над статьёй удобно начинать с~правки \TeX-файла данного документа.
+    
+\section{Вычислительный эксперимент}
+В этом разделе исследуется зависимость средней абсолютной ошибки MAPE от размерности фазового пространства, из которого происходит воостановление временного ряда. После чего в пространстве оптимальной размерности фазовая траектория разбивается на сегменты, соответствующие периодам рассматриваемого движения. Эксперименты проводятся на реальных данных, полученных с аксселерометра мобильного устройства во время ходьбы. Соответсвующий временной ряд изображен на рис. 1.
 
-Обращаем внимание, что данный документ должен быть сохранен в кодировке~\verb'UTF-8 without BOM'.
-Для смены кодировки рекомендуется пользоваться текстовыми редакторами \verb'Sublime Text' или \verb'Notepad++'.
+    \begin{figure}[h!]
+	    \center{\includegraphics[width=0.5\linewidth]{ts.jpg}}
+	    \caption{Исследуемый временной ряд.}
+    \end{figure}
+    
+Разложение временного ряда с помощью метода главных компонент и его восстановление описано в работе [1]. Количество выбранных главных компонент определяет размерность фазового пространства. По соответствующим собственным векторам восстанавливается временной ряд. Анализ ошибки MAPE в зависимости от размерности фазового пространства позволяет определить оптимальную размерность пространства, в котором фазовая траектория не имеет ярковыраженных самопересечений. Процесс сегментирования фазовой траектории в пространстве меньшец размерностти так же описан в [1].
+    
+    \begin{figure}[ht]
+        \subfloat[]{\includegraphics[width=0.32\textwidth]{fig1.jpg}}
+        \subfloat[]{\includegraphics[width=0.32\textwidth]{fig2.jpg}}
+        \subfloat[]{\includegraphics[width=0.32\textwidth]{fig3.jpg}}\\
+        \caption{Исходный временной ряд и его разложение для различных размерностей фазового пространства.}
+        \label{fg:mod}
+    \end{figure}
 
-\paragraph{Название параграфа}
-Разделы и~параграфы, за исключением списков литературы, нумеруются.
-
-\section{Заключение}
-Желательно, чтобы этот раздел был, причём он не~должен дословно повторять аннотацию.
-Обычно здесь отмечают, каких результатов удалось добиться, какие проблемы остались открытыми.
+    
+    \begin{figure}[ht]
+	    \center{\includegraphics[width=0.5\linewidth]{error.jpg}}
+	    \caption{График зависимости точности аппроксимации фазовой траектории от размерности фазового пространства.}
+    \end{figure}
+    
+\newpage
 
 %%%% если имеется doi цитируемого источника, необходимо его указать, см. пример в \bibitem{article}
 %%%% DOI публикации, зарегистрированной в системе Crossref, можно получить по адресу http://www.crossref.org/guestquery/
