--- a/docs/Kurdyukova2021WearableDevices.tex
+++ b/docs/Kurdyukova2021WearableDevices.tex
@@ -3,6 +3,10 @@
 \newcommand{\hdir}{.}
 
 \renewcommand{\baselinestretch} {1.35}
+\usepackage{xcolor}
+
+\usepackage[english, russian]{babel}
+\usepackage[utf8]{inputenc}
 
 \usepackage{graphicx}
 \usepackage{caption}
@@ -28,11 +32,11 @@
 %\organization
 %    {$^1$Организация, адрес; $^2$Организация, адрес}
 \abstract
-  {Данная работа посвящена определению фазы и разладки движения человека по сигналам носимых устройств. Исследуется широкий класс периодических движений человека или животного. Требуется найти начало и конец движения, а также определить момент смены типа движения. С этой целью решается задача сегментирования временных рядов. Строится фазовая траектория одного движения и отыскивается его фактическая размерность. Особенностью данной работы является автоматизация процесса нахождения минимальной размерности фазового пространства. По повторению фазовой траектории сегментируются периодические действия человека, а по ее разладке определяется смена типа движения. Анализ качества предлагаемого метода осуществляется на временных рядах, считанных с трехосевого акселерометра.
+  {Данная работа посвящена определению фазы и разладки движения человека по сигналам носимых устройств. Исследуются классы периодического движения человека или животного нескольких типов. Требуется найти начало и конец движения, а также определить момент смены типа движения. С этой целью решается задача сегментирования временных рядов. Строится фазовая траектория движения и отыскивается фактическая размерность фазового пространства. Предлагается модель оценки фазы движения и определения начала сегмента. По повторению фазовой траектории сегментируются периодические действия человека, а по ее разладке определяется смена типа движения. Качество предлагаемого метода анализируется на временных рядах, считанных с трехосевого акселерометра.
 
 \bigskip
 \noindent
-\textbf{Ключевые слова}: \emph {Временной ряд, фазовая траектория, траекторное попространство.}
+\textbf{Ключевые слова}: \emph {временные ряды, сегментация, метод главных компонент, фазовая траектория, траекторное пространство}
 }
 
 %данные поля заполняются редакцией журнала
@@ -44,30 +48,28 @@
 \linenumbers
 
 \section{Введение}
-С активным развитием области беспроводных технологий появилась возможность получать значительные объемы данных с носимых устройств. Анализ этих данных позволяет решать задачи, связанные с различными медицинскими приложениями, например, мониторинг состояния пациента, автоматизированное обнаружение падений для пожилых людей.
+Решается задача анализа данных, считываемых с носимых устройств. Результаты анализ этих данных используются в различных медицинских приложениях \cite{bussmann1998ambulatory, najafi2003ambulatory}, в частности, при мониторинге состояния пациентов \cite{grunerbl2014smartphone}, для автоматизированного обнаружения падений пожилых людей \cite{ma2014depth}.
 
-Имея дело с данными о движении человека или животного, приходится сталкиваться с “почти периодическими” временными рядами. Возникает задача сегментации таких временных рядов на периодоподобные участки. Основной целью этой работы является определение начала и конца движения. Для этого предлагается адекватная модель построения фазовой траектории. После чего рассматривается способ вычисления минимальной размерности собственного пространства фазовой траектории согласно критерию отсутствия самопересечений. Затем вводится понятие модели фазовой траектории. С помощью этих результатов сегментируются периодические действия человека по повторению фазовой траектории. Помимо этого, предлагается способ извлечения устойчивой начальной фазы конкретного типа движения в собственном пространстве фазовой траектории.
+Временные ряды движения человека или животного, измеренные акселерометром, имеют \emph{квазипериоды}. Решается задача разбиения таких временных рядов на периодоподобные временные интервалы. Целью этой работы является определение начала и конца движения. Предлагается адекватная модель построения фазовой траектории. Рассматривается способ получения оценки минимальной размерности собственного пространства фазовой траектории. \emph{Критериий отсутствия самопересечений}. Вводится понятие модели \emph{фазовой траектории}. По повторению фазовой траектории сегментируются периодические действия человека. Предлагается способ извлечения устойчивой начальной фазы конкретного типа движения в собственном пространстве фазовой траектории.
 
-Существуют работы, в которых решается задача сегментирования “почти периодических” временных рядов, но переход совершается в собственное пространство фиксированной размерности, равной двум. Нашей же целью является переход в фазовое пространство минимальной размерности, в которой фазовая траектория не имеет самопересечений с точностью до стандартного отклонения восстановленной траектории.
-
-Решение поставленных задач является важным шагом на пути к разработке алгоритмов, позволяющих определить разладку движения по фазовой траектории, найти инвариант, сохраняющийся на классах эквивалентности конкретного типа периодического движения, а также распознать суперпозицию нескольких движений. Эти результаты крайне важны с точки зрения понимания и моделирования человека, биомедицинского применения и внесли бы значительный вклад в область анализа биосигналов.
+В работе(ах) \cite{motrenko2015extracting} [..] решается задача сегментирования \emph{квазипериодических} временных рядов. \emph{Совершается переход в собственное пространство фиксированной размерности, равной двум}. Целью данной работы является переход в фазовое пространство минимальной размерности. \emph{Фазовая траектория не имеет самопересечений с точностью до стандартного отклонения восстановленной траектории}.
 
 \section{Постановка задачи}
 Данные, считанные с трехосевого акселерометра, представляют собой временной ряд 
     \begin{equation}\label{ts}
-        X = \{ x(i) \}_{i = 1}^{m}
+        X = \{ x(i) \}_{i = 1}^{m}.
     \end{equation}  
-Он соответсвует выделенному периодическому классу $y\in\mathbb{Y}$ (ходьба, бег, шаги вверх и вниз по лестнице и т.п.).
+Он соответсвует фиксированному классу периодического движения $y\in\mathbb{Y}$ (ходьба, бег, шаги вверх и вниз по лестнице и т.п.).
 
-Декомпозиция временного ряда методом главнх компонет. Пусть временной ряд \eqref{ts} представлен в виде разложения, каждое слагаемое которого с высокой точностью аппроксимируется комбинацией главных компонент траекторной матрицы
+Декомпозиция временного ряда методом главнх компонет. Временной ряд \eqref{ts} представлен в виде траекторного разложения, каждое слагаемое которого с высокой точностью аппроксимируется комбинацией главных компонент траекторной матрицы
     \[ \mathbf{H} = \begin{pmatrix}
                         x(1) & \dots & x(k) \\
                         x(2) & \dots & x(k+1) \\
                         \hdotsfor{3} \\
                         x(l) & \dots & x(m)
-                    \end{pmatrix}\]
+                    \end{pmatrix}.\]
 Для нахождения аппроксимации выполняется сингулярное разложение ковариационной матрицы $\mathbf{H}$
-    \[ \frac{1}{l}\mathbf{H}^{\mathsf{T}}\mathbf{H} = \mathbf{V}\mathbf{\Lambda}\mathbf{V}^{\mathsf{T}}, \quad \mathbf{\Lambda} = \diag(\lambda_1,\dots,\lambda_l) \]
+    \[ \frac{1}{l}\mathbf{H}^{\mathsf{T}}\mathbf{H} = \mathbf{V}\mathbf{\Lambda}\mathbf{V}^{\mathsf{T}}, \quad \mathbf{\Lambda} = \diag(\lambda_1,\dots,\lambda_l). \]
     после чего определяются главные компоненты $\mathbf{y}_k = \mathbf{Hv}_k$ для соответствующих собственных значений $\mathbf{H}^{\mathsf{T}}\mathbf{H}$.
 
 В данной работе требуется построить модель $f\in\mathfrak{F}$, аппроксимирующую фазовую траекторию с помощью минимального числа главных компонент. Каждая модель аппроксимирует временной ряд заданного класса $y$. Критерием оптимальной размерности является отсутсвие самопересечений фазовой траектории с точностью до стандартного отклонения восстановленной траектории. Требуется разбить фазовую траекторию на столько сегментов, сколько периодов содержится во временном ряде \eqref{ts}.
@@ -76,9 +78,9 @@
     \end{figure}
 
 Критерий качества модели. Пусть $\mathbf{y}_1,\dots,\mathbf{y}_n$ -- выбранные главные компоненты, аппроксимирующие фазовую траекторию. Тогда восстановленная часть траекторной матрицы $\mathbf{H}$
-    \[ \mathbf{\widetilde{H}} = \mathbf{H}_1  + \dots + \mathbf{H}_n, \quad \mathbf{H_j} = \sqrt{\lambda_j}\mathbf{v}_j\mathbf{y}_j^T\]
+    \[ \mathbf{\widetilde{H}} = \mathbf{H}_1  + \dots + \mathbf{H}_n, \quad \mathbf{H_j} = \sqrt{\lambda_j}\mathbf{v}_j\mathbf{y}_j^T.\]
 С помощью антидиагонального усреднения матрицы $\mathbf{\tilde{H}}$ восстанавливается временной ряд $\tilde{X}$. В качестве критерия качества модели используется функционал MAPE (средняя абсолютная процентная ошибка)
-    \[ \text{MAPE} = \frac{1}{\tau}\sum_{i = 1}^{\tau}100\frac{|\tilde{x}_i - x_i|}{|x_i|} \]
+    \[ \text{MAPE} = \frac{1}{\tau}\sum_{i = 1}^{\tau}100\frac{|\tilde{x}_i - x_i|}{|x_i|}. \]
     
 Сложностью модели является размерность фазового пространства.
     \begin{figure}[ht]
@@ -86,14 +88,14 @@
     \end{figure}
     
 \section{Вычислительный эксперимент}
-В этом разделе исследуется зависимость средней абсолютной ошибки MAPE от размерности фазового пространства, из которого происходит воостановление временного ряда. После чего в пространстве оптимальной размерности фазовая траектория разбивается на сегменты, соответствующие периодам рассматриваемого движения. Эксперименты проводятся на реальных данных, полученных с аксселерометра мобильного устройства во время ходьбы. Соответсвующий временной ряд изображен на рис. 1.
+В этом разделе исследуется зависимость средней абсолютной ошибки MAPE от размерности фазового пространства, из которого происходит воостановление временного ряда. В пространстве \emph{оптимальной размерности} фазовая траектория разбивается на сегменты, соответствующие периодам рассматриваемого движения. Эксперименты проводятся на реальных данных, полученных с аксселерометра мобильного устройства во время ходьбы. Соответсвующий временной ряд изображен на рис. 1.
 
     \begin{figure}[h!]
 	    \center{\includegraphics[width=0.5\linewidth]{ts.jpg}}
 	    \caption{Исследуемый временной ряд.}
     \end{figure}
     
-Разложение временного ряда с помощью метода главных компонент и его восстановление описано в работе [1]. Количество выбранных главных компонент определяет размерность фазового пространства. По соответствующим собственным векторам восстанавливается временной ряд. Анализ ошибки MAPE в зависимости от размерности фазового пространства позволяет определить оптимальную размерность пространства, в котором фазовая траектория не имеет ярковыраженных самопересечений. Процесс сегментирования фазовой траектории в пространстве меньшец размерностти так же описан в [1].
+Разложение временного ряда с помощью метода главных компонент и его восстановление описано в работе \cite{motrenko2015extracting}. Количество выбранных главных компонент определяет размерность фазового пространства. По соответствующим собственным векторам восстанавливается временной ряд. Анализ ошибки MAPE в зависимости от размерности фазового пространства позволяет определить оптимальную размерность пространства, в котором фазовая траектория не имеет ярковыраженных самопересечений. Процесс сегментирования фазовой траектории в пространстве меньшец размерностти так же описан в \cite{motrenko2015extracting}.
     
     \begin{figure}[ht]
         \subfloat[]{\includegraphics[width=0.32\textwidth]{fig1.jpg}}
@@ -111,10 +113,20 @@
     
 \newpage
 
+\section{Заключение}
+\textcolor{gray}{Первая часть заключения.}
+
+\textcolor{gray}{Вторая часть заключения.} Решение поставленных задач является важным шагом на пути к разработке алгоритмов, позволяющих определить разладку движения по фазовой траектории, найти инвариант, сохраняющийся на классах эквивалентности конкретного типа периодического движения, а также распознать суперпозицию нескольких движений. Эти результаты крайне важны с точки зрения понимания и моделирования человека, биомедицинского применения и внесли бы значительный вклад в область анализа биосигналов.
+
+
 %%%% если имеется doi цитируемого источника, необходимо его указать, см. пример в \bibitem{article}
 %%%% DOI публикации, зарегистрированной в системе Crossref, можно получить по адресу http://www.crossref.org/guestquery/
 
 %%%% если имеется doi цитируемого источника, необходимо его указать, см. пример в \bibitem{article}
 %%%% DOI публикации, зарегистрированной в системе Crossref, можно получить по адресу http://www.crossref.org/guestquery/.
+
+\bibliographystyle{unsrt}
+\bibliography{biblio}
+
 
 \end{document} 
