--- a/docs/Kurdyukova2021WearableDevices.tex
+++ b/docs/Kurdyukova2021WearableDevices.tex
@@ -50,23 +50,32 @@
 \section{Введение}
 Решается задача анализа данных, считываемых с носимых устройств. Результаты анализ этих данных используются в различных медицинских приложениях \cite{bussmann1998ambulatory, najafi2003ambulatory}, в частности, при мониторинге состояния пациентов \cite{grunerbl2014smartphone}, для автоматизированного обнаружения падений пожилых людей \cite{ma2014depth}.
 
-Временные ряды движения человека или животного, измеренные акселерометром, имеют \emph{квазипериоды}. Решается задача разбиения таких временных рядов на периодоподобные временные интервалы. Целью этой работы является определение начала и конца движения. Предлагается адекватная модель построения фазовой траектории. Рассматривается способ получения оценки минимальной размерности собственного пространства фазовой траектории. \emph{Критериий отсутствия самопересечений}. Вводится понятие модели \emph{фазовой траектории}. По повторению фазовой траектории сегментируются периодические действия человека. Предлагается способ извлечения устойчивой начальной фазы конкретного типа движения в собственном пространстве фазовой траектории.
+Временной ряд $\{s_t\}_{t=1}^m$\, движения человека или животного назовем \emph{квазипериодическим} с периодом $T$, если 
+    \begin{equation}\label{st}
+       \forall t\;\exists \, \delta\mspace{5mu} \hookrightarrow\mspace{5mu} s_{t} \approx s_{t + T + \delta}, \quad |\delta| \ll T. 
+    \end{equation}
+Решается задача разбиения таких временных рядов на периодоподобные временные интервалы. Целью этой работы является определение начала и конца движения. Предлагается \emph{адекватная модель построения фазовой траектории}. Рассматривается способ получения оценки размерности \emph{собственного пространства} фазовой траектории -- траекторного пространства минимальной размерности, при котором аппроксимирующая модель строит адекватное приближение ряда \eqref{st}. \emph{Критериий отсутствия самопересечений}. По повторению фазовой траектории сегментируются периодические действия человека. Предлагается способ извлечения устойчивой начальной фазы конкретного типа движения в собственном пространстве фазовой траектории.
 
-В работе(ах) \cite{motrenko2015extracting} [..] решается задача сегментирования \emph{квазипериодических} временных рядов. \emph{Совершается переход в собственное пространство фиксированной размерности, равной двум}. Целью данной работы является переход в фазовое пространство минимальной размерности. \emph{Фазовая траектория не имеет самопересечений с точностью до стандартного отклонения восстановленной траектории}.
+    \begin{figure}[ht]
+        \center{\includegraphics[scale = 0.9]{st.jpg}}
+        \caption{Временной ряд и его фазовая траектория}
+    \end{figure}
+
+В работе(ах) \cite{motrenko2015extracting} [..] решается задача сегментирования квазипериодических временных рядов. Совершается переход в собственное пространство фиксированной размерности, равной двум. Целью данной работы является переход в фазовое пространство минимальной размерности. \emph{Фазовая траектория не имеет самопересечений с точностью до стандартного отклонения восстановленной траектории}.
 
 \section{Постановка задачи}
 Данные, считанные с трехосевого акселерометра, представляют собой временной ряд 
     \begin{equation}\label{ts}
-        X = \{ x(i) \}_{i = 1}^{m}.
+        X = \{ x(i) \}_{i = 1}^{N}.
     \end{equation}  
 Он соответсвует фиксированному классу периодического движения $y\in\mathbb{Y}$ (ходьба, бег, шаги вверх и вниз по лестнице и т.п.).
 
 Декомпозиция временного ряда методом главнх компонет. Временной ряд \eqref{ts} представлен в виде траекторного разложения, каждое слагаемое которого с высокой точностью аппроксимируется комбинацией главных компонент траекторной матрицы
     \[ \mathbf{H} = \begin{pmatrix}
-                        x(1) & \dots & x(k) \\
+                        x(1) & \dots & x(n) \\
                         x(2) & \dots & x(k+1) \\
                         \hdotsfor{3} \\
-                        x(l) & \dots & x(m)
+                        x(N-n+1) & \dots & x(N)
                     \end{pmatrix}.\]
 Для нахождения аппроксимации выполняется сингулярное разложение ковариационной матрицы $\mathbf{H}$
     \[ \frac{1}{l}\mathbf{H}^{\mathsf{T}}\mathbf{H} = \mathbf{V}\mathbf{\Lambda}\mathbf{V}^{\mathsf{T}}, \quad \mathbf{\Lambda} = \diag(\lambda_1,\dots,\lambda_l). \]
@@ -77,8 +86,8 @@
             \center{\includegraphics[scale = 0.165]{phase2.jpg}}
     \end{figure}
 
-Критерий качества модели. Пусть $\mathbf{y}_1,\dots,\mathbf{y}_n$ -- выбранные главные компоненты, аппроксимирующие фазовую траекторию. Тогда восстановленная часть траекторной матрицы $\mathbf{H}$
-    \[ \mathbf{\widetilde{H}} = \mathbf{H}_1  + \dots + \mathbf{H}_n, \quad \mathbf{H_j} = \sqrt{\lambda_j}\mathbf{v}_j\mathbf{y}_j^T.\]
+Критерий качества модели. Пусть $\mathbf{y}_1,\dots,\mathbf{y}_p$ -- выбранные главные компоненты, аппроксимирующие фазовую траекторию. Тогда восстановленная часть траекторной матрицы $\mathbf{H}$
+    \[ \mathbf{\widetilde{H}} = \mathbf{H}_1  + \dots + \mathbf{H}_p, \quad \mathbf{H_j} = \sqrt{\lambda_j}\mathbf{v}_j\mathbf{y}_j^T.\]
 С помощью антидиагонального усреднения матрицы $\mathbf{\tilde{H}}$ восстанавливается временной ряд $\tilde{X}$. В качестве критерия качества модели используется функционал MAPE (средняя абсолютная процентная ошибка)
     \[ \text{MAPE} = \frac{1}{\tau}\sum_{i = 1}^{\tau}100\frac{|\tilde{x}_i - x_i|}{|x_i|}. \]
     
@@ -107,8 +116,10 @@
 
     
     \begin{figure}[ht]
-	    \center{\includegraphics[width=0.5\linewidth]{error.jpg}}
-	    \caption{График зависимости точности аппроксимации фазовой траектории от размерности фазового пространства.}
+        \subfloat[]{\includegraphics[width=0.5\textwidth]{error.jpg}}
+        \subfloat[]{\includegraphics[width=0.7\textwidth]{phase3.jpg}}
+	    %\includegraphics[width=0.5\linewidth]{error.jpg}
+	    \caption{График зависимости точности аппроксимации и количества самопересечений фазовой траектории от размерности фазового пространства пространства.}
     \end{figure}
     
 \newpage
